Fix HTML structure and add alert for debugging

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ button:hover { background-color: #357ab8; }
 </div>
 
 <script defer>
+  alert("jjjjjj");
 document.addEventListener("DOMContentLoaded", function() {
 
   const data = {
@@ -153,3 +154,4 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
