--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ button:hover { background-color: #357ab8; }
   <p class="note">اختر أكثر من طالبة بالضغط على Ctrl (أو Cmd) أو باللمس المطول</p>
 </div>
 
-<script defer>
+<script>
   alert("jjjjjj");
 document.addEventListener("DOMContentLoaded", function() {
 
@@ -154,4 +154,5 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
 
